--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
